--- a/index.html
+++ b/index.html
@@ -44,11 +44,9 @@
 						<ul class="site-navigation nav navbar-nav">
 							<li>
 								<a href="index.html">Accueil</a>
-							</li>
+							</li>							
 							<li>
-							</li>
-							<li>
-								<a href="page2.html">page2 &gt;</a>
+								<a href="page2.html">Contact ></a>
 							</li>
 						</ul>
 					</div>
@@ -87,13 +85,13 @@
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">Web design</h3>
-						<p class="text-center ">Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
+						<p class="text-center ">Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
 					</div>
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
-						<h3 class="mg-md text-center">&nbsp;Stratégie</h3>
+						<h3 class="mg-md text-center">Stratégie</h3>
 						<p class="text-center">Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
 					</div>
 					<div class="col-sm-4">
