--- a/index.html
+++ b/index.html
@@ -118,9 +118,8 @@
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
 						<h2 class="mg-md text-center tc-white">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.</h2>
-						<p class="text-center white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.
-							<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>
-						</p>
+						<p class="text-center white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
+						<p class="text-center"><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a></p>
 					</div>
 				</div>
 			</div>
@@ -175,7 +174,7 @@
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
-					<h2 class="mg-md text-center tc-white">Prêt pour redonner vie à votre projet ?Contactez notre équipe !</h2>
+					<h2 class="mg-md text-center tc-white">Prêt pour redonner vie à votre projet ? Contactez notre équipe !</h2>
 					<div class="col-sm-12 text-center">
 						<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 					</div>
@@ -222,7 +221,7 @@
 						</div>
 						<div class="row">
 							<div class="col-sm-4">
-								Partenaires
+								<p>Partenaires</p>
 									<ul>
 										<li><a href="voiture.com">voiture.com</a></li>
 										<li><a href="pizza.com">pizza.com</a></li>
@@ -231,7 +230,7 @@
 									</ul>		
 							</div>
 							<div class="col-sm-4">
-								Annuaires liste 1
+								<p>Annuaires liste 1</p>
 								<ul>
 									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -245,7 +244,7 @@
 								</ul>
 							</div>
 							<div class="col-sm-4">
-								Annuaires liste 2
+								<p>Annuaires liste 2</p>
 								<ul>
 									<li><a href="betterseo.com">betterseo.com</a></li>
 									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
