--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>La Panthère agence de Web Design</title>
+    <title>La Panthère - Agence de Web Design</title>
 	<meta name="description" content="La Panthère est une grande agence de Web Design de Lyon, qui aide les entreprise à devenir attractives et visibles sur Internet">    
 <!-- Analytics --> 
 <!-- Analytics END -->    
