--- a/page2.html
+++ b/page2.html
@@ -61,8 +61,8 @@
 				<div class="row">
 					<div class="col-sm-12">
 						<h1 class="text-center hero-bloc-text tc-white">Parlons web design !</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
-							Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
+						<p class="text-center mg-lg tc-white tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
+						<p class="text-center mg-lg tc-white tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
 					</div>
 				</div>
 			</div>
@@ -77,15 +77,15 @@
 						<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 							<div class="form-group">
 								<label>Nom</label>
-								<input id="name" class="form-control" required />
+								<input id="name" class="form-control" required/>
 							</div>
 							<div class="form-group">
 								<label>Adresse email</label>
-								<input id="email" class="form-control" type="email" required />
+								<input id="email" class="form-control" type="email" required/>
 							</div>
 							<div class="form-group">
 								<label>Comment nous avez-vous connu ?</label>
-								<input class="form-control" type="email" required id="input_504" />
+								<input class="form-control" type="email" required id="input_504"/>
 							</div>
 							<div class="form-group">
 								<label>Brief de votre projet (Ajoutez autant de détails que nécessaire)<br></label>
@@ -95,7 +95,9 @@
 						</form>
 					</div>
 					<div class="col-sm-6">
-						<p>contact@agencelapanthere.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br></p>
+						<p>contact@agencelapanthere.com</p>
+						<p>2 place Sathonay 69001 Lyon</p>
+						<p>Ouvert de 9h à 18h, du lundi au vendredi</p>						
 					</div>
 				</div>
 			</div>
@@ -114,7 +116,7 @@
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.<br></p>
+						<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
 						<div class="row row-no-gutters social">
 							<div class="col-sm-3">
 								<div class="text-center">
