--- a/index.html
+++ b/index.html
@@ -22,38 +22,38 @@
 
 <body>
 
+	<!-- bloc-0 -->
+	<header class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="container bloc-sm">
+			<nav class="navbar row">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html">
+						<img src="img/agence-la-panthere-monochrome.svg" alt="Logo La Panthère Agence de web design" height="40"/>
+					</a>
+					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<ul class="site-navigation nav navbar-nav">
+						<li>
+							<a href="index.html">Accueil</a>
+						</li>							
+						<li>
+							<a href="page2.html">Contact ></a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+	</header>
+	<!-- bloc-0 END -->
+
 	<!-- Principal conteneur -->
 	<main class="page-container">
-
-		<!-- bloc-0 -->
-		<section class="bloc bgc-white l-bloc " id="bloc-0">
-			<div class="container bloc-sm">
-				<nav class="navbar row">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html">
-							<img src="img/agence-la-panthere-monochrome.svg" alt="Logo La Panthère Agence de web design" height="40"/>
-						</a>
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>							
-							<li>
-								<a href="page2.html">Contact ></a>
-							</li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</section>
-		<!-- bloc-0 END -->
 
 		<!-- bloc-1-presentation -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
@@ -183,89 +183,89 @@
 		</section>
 		<!-- bloc-5-cta END -->
 
-		<!-- Footer - bloc-8 -->
-		<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<div class="container bloc-sm">
-				<div class="row">
-					<div class="col-sm-12">
-						<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
-						<div class="row row-no-gutters social">
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html">
-										<span class="fa fa-twitter icon-md"></span>
-									</a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html">
-										<span class="fa fa-facebook icon-md"></span>
-									</a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html">
-										<span class="fa fa-dribbble icon-md"></span>
-									</a>
-								</div>
-							</div>
-							<div class="col-sm-3">
-								<div class="text-center">
-									<a class="social" href="index.html">
-										<span class="fa fa-instagram icon-md"></span>
-									</a>
-								</div>
+	</main>
+	<!-- Principal conteneur END -->
+	
+	<!-- Footer - bloc-8 -->
+	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<div class="container bloc-sm">
+			<div class="row">
+				<div class="col-sm-12">
+					<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
+					<div class="row row-no-gutters social">
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span class="fa fa-twitter icon-md"></span>
+								</a>
 							</div>
 						</div>
-						<div class="row">
-							<div class="col-sm-4">
-								<p>Partenaires</p>
-									<ul>
-										<li><a href="voiture.com">voiture.com</a></li>
-										<li><a href="pizza.com">pizza.com</a></li>
-										<li><a href="matoiture.com">matoiture.com</a></li>
-										<li><a href="immobilierseo.com">immobilierseo.com</a></li>
-									</ul>		
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span class="fa fa-facebook icon-md"></span>
+								</a>
 							</div>
-							<div class="col-sm-4">
-								<p>Annuaires liste 1</p>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span class="fa fa-dribbble icon-md"></span>
+								</a>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div class="text-center">
+								<a class="social" href="index.html">
+									<span class="fa fa-instagram icon-md"></span>
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-sm-4">
+							<p>Partenaires</p>
 								<ul>
-									<li><a href="annuaireagence.com">annuaireagence.com</a></li>
-									<li><a href="annuaireseo.com">annuaireseo.com</a></li>
-									<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
-									<li><a href="123seoture.com">123seo.com</a></li>
-									<li><a href="123site.com">123site.com</a></li>
-									<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
-									<li><a href="listeagence.com">listeagence.com</a></li>
-									<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
-									<li><a href="listeseo.com">listeseo.com</a></li>
-								</ul>
-							</div>
-							<div class="col-sm-4">
-								<p>Annuaires liste 2</p>
-								<ul>
-									<li><a href="betterseo.com">betterseo.com</a></li>
-									<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
-									<li><a href="seojuicelien.com">seojuicelien.com</a></li>
-									<li><a href="meilleursliens.com">meilleursliens.com</a></li>
-									<li><a href="liensagogo.com">liensagogo.com</a></li>
-									<li><a href="backlink.com">backlink.com</a></li>
-									<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
-									<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
-									<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
-								</ul>
-							</div>
+									<li><a href="voiture.com">voiture.com</a></li>
+									<li><a href="pizza.com">pizza.com</a></li>
+									<li><a href="matoiture.com">matoiture.com</a></li>
+									<li><a href="immobilierseo.com">immobilierseo.com</a></li>
+								</ul>		
+						</div>
+						<div class="col-sm-4">
+							<p>Annuaires liste 1</p>
+							<ul>
+								<li><a href="annuaireagence.com">annuaireagence.com</a></li>
+								<li><a href="annuaireseo.com">annuaireseo.com</a></li>
+								<li><a href="annuairemarketing.com">annuairemarketing.com</a></li>
+								<li><a href="123seoture.com">123seo.com</a></li>
+								<li><a href="123site.com">123site.com</a></li>
+								<li><a href="annuairewordpress.com">annuairewordpress.com</a></li>
+								<li><a href="listeagence.com">listeagence.com</a></li>
+								<li><a href="meilleuresagencesparis.com">meilleuresagencesparis.com</a></li>
+								<li><a href="listeseo.com">listeseo.com</a></li>
+							</ul>
+						</div>
+						<div class="col-sm-4">
+							<p>Annuaires liste 2</p>
+							<ul>
+								<li><a href="betterseo.com">betterseo.com</a></li>
+								<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
+								<li><a href="seojuicelien.com">seojuicelien.com</a></li>
+								<li><a href="meilleursliens.com">meilleursliens.com</a></li>
+								<li><a href="liensagogo.com">liensagogo.com</a></li>
+								<li><a href="backlink.com">backlink.com</a></li>
+								<li><a href="linkjuiceannuaire.com">linkjuiceannuaire.com</a></li>
+								<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
+								<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
+							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
-		</footer>
-		<!-- Footer - bloc-8 END -->
-
-	</main>
-	<!-- Principal conteneur END -->
+		</div>
+	</footer>
+	<!-- Footer - bloc-8 END -->
 
 </body>
 </html>
