--- a/page2.html
+++ b/page2.html
@@ -20,40 +20,40 @@
 <!-- Analytics END -->    
 </head>
 
-<body>
+<body>	
+		
+	<!-- bloc-0 -->
+	<header class="bloc bgc-white l-bloc " id="bloc-0">
+		<div class="container bloc-sm">
+			<nav class="navbar row">
+				<div class="navbar-header">
+					<a class="navbar-brand" href="index.html">
+						<img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" />
+					</a>
+					<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
+					<ul class="site-navigation nav navbar-nav">
+						<li>
+							<a href="index.html">Accueil</a>
+						</li>
+						<li>
+							<a href="page2.html">page2 ></a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+	</header>
+	<!-- bloc-0 END -->
 
 	<!-- Principal conteneur -->
 	<main class="page-container">
-		
-		<!-- bloc-0 -->
-		<section class="bloc bgc-white l-bloc " id="bloc-0">
-			<div class="container bloc-sm">
-				<nav class="navbar row">
-					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html">
-							<img src="img/agence-la-panthere-monochrome.svg" alt="atlanta web design logo" height="40" />
-						</a>
-						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-					</div>
-					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
-						<ul class="site-navigation nav navbar-nav">
-							<li>
-								<a href="index.html">Accueil</a>
-							</li>
-							<li>
-								<a href="page2.html">page2 &gt;</a>
-							</li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</section>
-		<!-- bloc-0 END -->
 
 		<!-- bloc-6 -->
 		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
