--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="container bloc-md">
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<p>L'agence La Panthère est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet</p>
+						<p>L'agence La Panthère est une <strong>agence de web design</strong> qui aide les entreprises à devenir attractives et visibles sur Internet</p>
 					</div>
 				</div>
 				<div class="row voffset-lg med-width-whitespace">
@@ -92,19 +92,19 @@
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">Stratégie</h3>
-						<p class="text-center">Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
+						<p class="text-center">Plutôt que de suggérer des <strong>designs à la mode</strong>, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
 					</div>
 					<div class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">Illustrations</h3>
-						<p class="text-center ">Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.</p>
+						<p class="text-center ">Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de <strong>graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
 					</div>
 				</div>
 				<div class="row voffset-lg voffset">
 					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<p>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lignes à Lyon."</p>
+						<p>"L'agence La Panthère est une excellente agence web ! Les <strong>web designers</strong> ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos <strong>ventes en lignes à Lyon</strong>."</p>
 						<p>Maxime Guibard, PDG de À vos fourchettes</p>
 					</div>
 				</div>
@@ -118,8 +118,10 @@
 				<div class="row tight-width-whitespace black-background">
 					<div class="col-sm-12">
 						<h2 class="mg-md text-center tc-white">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.</h2>
-						<p class="text-center white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
-						<p class="text-center"><a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a></p>
+						<p class="text-center white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de <strong>créer un site de A à Z</strong> ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
+						<p class="text-center">
+							<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>
+						</p>
 					</div>
 				</div>
 			</div>
@@ -137,7 +139,7 @@
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
-							<img src="img/1.jpg" class="img-responsive portfolio-thumb" alt="Images de livres"/>
+							<img src="img/1.jpg" class="img-responsive portfolio-thumb" alt="Images de livres ouverts"/>
 						</a>
 						<h3 class="mg-md text-center">Refonte d'un site web pour un journal local</h3>
 						<p class="text-center">Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.</p>
