--- a/index.html
+++ b/index.html
@@ -72,42 +72,52 @@
 		<!-- bloc-1-presentation END -->
 
 		<!-- bloc-2-services -->
-		<section class="bloc bgc-white l-bloc" id="bloc-2-services">
+		<section class="bloc bgc-white l-bloc" id="bloc-2-services">			
 			<div class="container bloc-md">
+
 				<div class="row">
 					<div class="col-sm-12 text-center">
-						<p>L'agence La Panthère est une <strong>agence de web design</strong> qui aide les entreprises à devenir attractives et visibles sur Internet</p>
+						<h2>L'agence La Panthère est une <strong>agence de web design</strong> qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
 					</div>
 				</div>
+
 				<div class="row voffset-lg med-width-whitespace">
-					<div class="col-sm-4">
+
+					<article class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">Web design</h3>
 						<p class="text-center ">Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
-					</div>
-					<div class="col-sm-4">
+					</article>
+
+					<article class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">Stratégie</h3>
 						<p class="text-center">Plutôt que de suggérer des <strong>designs à la mode</strong>, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
-					</div>
-					<div class="col-sm-4">
+					</article>
+
+					<article class="col-sm-4">
 						<div class="text-center">
 							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 						</div>
 						<h3 class="mg-md text-center">Illustrations</h3>
 						<p class="text-center ">Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de <strong>graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
-					</div>
+					</article>
+
 				</div>
-				<div class="row voffset-lg voffset">
-					<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-						<p>"L'agence La Panthère est une excellente agence web ! Les <strong>web designers</strong> ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos <strong>ventes en lignes à Lyon</strong>."</p>
-						<p>Maxime Guibard, PDG de À vos fourchettes</p>
-					</div>
-				</div>
+
+				<figure class="row voffset-lg voffset col-xs-12 col-md-8 col-md-offset-2 text-center">					
+						<blockquote>
+							<p>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lignes à Lyon."</p>
+						</blockquote>
+						<figcaption>
+							Maxime Guibard, PDG de <cite>À vos fourchettes</cite>
+						</figcaption>					
+				</figure>
+
 			</div>
 		</section>
 		<!-- bloc-2-services END -->
