--- a/index.html
+++ b/index.html
@@ -83,26 +83,20 @@
 
 				<div class="row voffset-lg med-width-whitespace">
 
-					<article class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
+					<article class="col-sm-4 text-center">						
+						<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>						
 						<h3 class="mg-md text-center">Web design</h3>
 						<p class="text-center ">Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
 					</article>
 
-					<article class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
+					<article class="col-sm-4 text-center">
+						<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>						
 						<h3 class="mg-md text-center">Stratégie</h3>
 						<p class="text-center">Plutôt que de suggérer des <strong>designs à la mode</strong>, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
 					</article>
 
-					<article class="col-sm-4">
-						<div class="text-center">
-							<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
-						</div>
+					<article class="col-sm-4 text-center">						
+						<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>						
 						<h3 class="mg-md text-center">Illustrations</h3>
 						<p class="text-center ">Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de <strong>graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
 					</article>
