--- a/index.html
+++ b/index.html
@@ -58,14 +58,10 @@
 		<!-- bloc-1-presentation -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
-				<div class="row tight-width-whitespace">
-					<div class="col-sm-12">
-						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La Panthère"/>
-						<h1 class="text-center hero-bloc-text tc-white ">Agence La Panthère</h1>
-						<div class="text-center">
-							<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
-						</div>
-					</div>
+				<div class="col-sm-12 text-center">
+					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La Panthère"/>
+					<h1 class="hero-bloc-text tc-white ">Agence La Panthère</h1>
+					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>						
 				</div>
 			</div>
 		</section>
