--- a/index.html
+++ b/index.html
@@ -168,14 +168,14 @@
 
 		<!-- bloc-5-cta -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+
 			<div class="container bloc-lg">
-				<div class="row">
-					<h2 class="mg-md text-center tc-white">Prêt pour redonner vie à votre projet ? Contactez notre équipe !</h2>
-					<div class="col-sm-12 text-center">
-						<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
-					</div>
+				<div class="row col-sm-12 text-center">
+					<h2 class="mg-md tc-white">Prêt pour redonner vie à votre projet ? Contactez notre équipe !</h2>					
+					<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>					
 				</div>
 			</div>
+			
 		</section>
 		<!-- bloc-5-cta END -->
 
