--- a/index.html
+++ b/index.html
@@ -184,43 +184,42 @@
 	
 	<!-- Footer - bloc-8 -->
 	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+
 		<div class="container bloc-sm">
-			<div class="row">
-				<div class="col-sm-12">
-					<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
-					<div class="row row-no-gutters social">
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html">
-									<span class="fa fa-twitter icon-md"></span>
-								</a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html">
-									<span class="fa fa-facebook icon-md"></span>
-								</a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html">
-									<span class="fa fa-dribbble icon-md"></span>
-								</a>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div class="text-center">
-								<a class="social" href="index.html">
-									<span class="fa fa-instagram icon-md"></span>
-								</a>
-							</div>
-						</div>
+			<div class="row col-sm-12">
+
+				<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
+				<div class="row-no-gutters social">
+
+					<div class="col-sm-3 text-center">
+						<a class="social" href="index.html">
+							<span class="fa fa-twitter icon-md"></span>
+						</a>
 					</div>
+
+					<div class="col-sm-3 text-center">
+						<a class="social" href="index.html">
+							<span class="fa fa-facebook icon-md"></span>
+						</a>
+					</div>
+
+					<div class="col-sm-3 text-center">
+						<a class="social" href="index.html">
+							<span class="fa fa-dribbble icon-md"></span>
+						</a>
+					</div>
+					
+					<div class="col-sm-3 text-center">
+						<a class="social" href="index.html">
+							<span class="fa fa-instagram icon-md"></span>
+						</a>
+					</div>
+
 				</div>
+
 			</div>
 		</div>
+
 	</footer>
 	<!-- Footer - bloc-8 END -->
 
