--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 			</div>
 
 			<figure class="row voffset-lg voffset col-xs-12 col-md-8 col-md-offset-2 text-center">					
-				<blockquote>
+				<cite>
 					<p>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lignes à Lyon."</p>
-				</blockquote>
+				</cite>
 				<figcaption>
-					Maxime Guibard, PDG de <cite>À vos fourchettes</cite>
+					Maxime Guibard, PDG de À vos fourchettes
 				</figcaption>					
 			</figure>
 
@@ -110,8 +110,8 @@
 		<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 
 			<div class="container bloc-lg">
-				<div class="row tight-width-whitespace black-background">
-					<div class="col-sm-12 text-center">
+				<div class="row tight-width-whitespace black-background text-center">
+					<div class="col-sm-12 ">
 						<h2 class="mg-md tc-white">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.</h2>
 						<p class="white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de <strong>créer un site de A à Z</strong> ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
 						<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>						
