Suppression de toutes les classes text-center et placement dans le main

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 	<!-- bloc-0 END -->
 
 	<!-- Principal conteneur -->
-	<main class="page-container">
+	<main class="page-container text-center">
 
 		<!-- bloc-1-presentation -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
-				<div class="col-sm-12 text-center">
+				<div class="col-sm-12">
 					<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La Panthère"/>
 					<h1 class="hero-bloc-text tc-white ">Agence La Panthère</h1>
 					<a href="page2.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>						
@@ -70,37 +70,35 @@
 		<!-- bloc-2-services -->
 		<section class="bloc bgc-white l-bloc container bloc-md" id="bloc-2-services">
 
-			<div class="row col-sm-12 text-center">
+			<div class="row col-sm-12">
 				<h2>L'agence La Panthère est une <strong>agence de web design</strong> qui aide les entreprises à devenir attractives et visibles sur Internet</h2>
 			</div>
 
 			<div class="row voffset-lg med-width-whitespace">
-				<article class="col-sm-4 text-center">						
+				<article class="col-sm-4">						
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>						
-					<h3 class="mg-md text-center">Web design</h3>
-					<p class="text-center ">Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
+					<h3 class="mg-md">Web design</h3>
+					<p>Que vous ayez un site web qui a besoin d'un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.</p>
 				</article>
 
-				<article class="col-sm-4 text-center">
+				<article class="col-sm-4">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>						
-					<h3 class="mg-md text-center">Stratégie</h3>
-					<p class="text-center">Plutôt que de suggérer des <strong>designs à la mode</strong>, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
+					<h3 class="mg-md">Stratégie</h3>
+					<p>Plutôt que de suggérer des <strong>designs à la mode</strong>, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.</p>
 				</article>
 
-				<article class="col-sm-4 text-center">						
+				<article class="col-sm-4">						
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>						
-					<h3 class="mg-md text-center">Illustrations</h3>
-					<p class="text-center ">Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de <strong>graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
+					<h3 class="mg-md">Illustrations</h3>
+					<p>Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de <strong>graphistes talentueux</strong> pour donner à vos pages une touche finale d'élégance.</p>
 				</article>
 			</div>
 
-			<figure class="row voffset-lg voffset col-xs-12 col-md-8 col-md-offset-2 text-center">					
+			<figure class="row voffset-lg voffset col-xs-12 col-md-8 col-md-offset-2">					
 				<cite>
 					<p>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lignes à Lyon."</p>
 				</cite>
-				<figcaption>
-					Maxime Guibard, PDG de À vos fourchettes
-				</figcaption>					
+				<figcaption>Maxime Guibard, PDG de À vos fourchettes</figcaption>					
 			</figure>
 
 		</section>
@@ -110,8 +108,8 @@
 		<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 
 			<div class="container bloc-lg">
-				<div class="row tight-width-whitespace black-background text-center">
-					<div class="col-sm-12 ">
+				<div class="row tight-width-whitespace black-background">
+					<div class="col-sm-12">
 						<h2 class="mg-md tc-white">Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients.</h2>
 						<p class="white">Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de <strong>créer un site de A à Z</strong> ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche.</p>
 						<a class="ltc-white bold-link" href="page2.html">Contactez notre équipe</a>						
@@ -126,7 +124,7 @@
 		<section class="bloc-lg bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 
 			<div class="row">
-				<h2 class="col-sm-12 text-center">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>					
+				<h2 class="col-sm-12">Nous travaillons avec beaucoup de clients, voici nos réalisations.</h2>					
 			</div>
 
 			<div class="row tight-width-whitespace portfolio-row">				
@@ -134,32 +132,32 @@
 					<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb">
 						<img src="img/1.jpg" class="img-responsive portfolio-thumb" alt="Images de livres ouverts"/>
 					</a>
-					<h3 class="mg-md text-center">Refonte d'un site web pour un journal local</h3>
-					<p class="text-center">Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.</p>
+					<h3 class="mg-md">Refonte d'un site web pour un journal local</h3>
+					<p>Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.</p>
 				</div>
 
 				<div class="col-sm-6">
 					<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb">
 						<img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Femme photographe entrain de prendre une photo"/>
 					</a>
-					<h3 class="mg-md text-center">Création d'un site web pour photographes</h3>
-					<p class="text-center">Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.</p>
+					<h3 class="mg-md">Création d'un site web pour photographes</h3>
+					<p>Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.</p>
 				</div>
 			
 				<div class="col-sm-6">
 					<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb">
 						<img src="img/3.bmp" class="img-responsive portfolio-thumb" alt="Image de matériel photo, vidéo et informatique"/>
 					</a>
-					<h3 class="mg-md text-center">Création d'un site internet pour un voyageur</h3>
-					<p class="text-center">Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
+					<h3 class="mg-md">Création d'un site internet pour un voyageur</h3>
+					<p>Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.</p>
 				</div>
 
 				<div class="col-sm-6">
 					<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb">
 						<img src="img/4.bmp" class="img-responsive portfolio-thumb" alt="Photo de préparatif pour un mariage"/>
 					</a>
-					<h3 class="mg-md text-center">Conception d'un site pour une agence de mariage</h3>
-					<p class="text-center">Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.</p>
+					<h3 class="mg-md">Conception d'un site pour une agence de mariage</h3>
+					<p>Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.</p>
 				</div>
 			</div>			
 
@@ -170,7 +168,7 @@
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 
 			<div class="container bloc-lg">
-				<div class="row col-sm-12 text-center">
+				<div class="row col-sm-12">
 					<h2 class="mg-md tc-white">Prêt pour redonner vie à votre projet ? Contactez notre équipe !</h2>					
 					<a href="page2.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>					
 				</div>
@@ -188,28 +186,28 @@
 		<div class="container bloc-sm">
 			<div class="row col-sm-12">
 
-				<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
+				<p class="white">Agence La Panthère - Agence web basée à Lyon.</p>
 				<div class="row-no-gutters social">
 
-					<div class="col-sm-3 text-center">
+					<div class="col-sm-3">
 						<a class="social" href="index.html">
 							<span class="fa fa-twitter icon-md"></span>
 						</a>
 					</div>
 
-					<div class="col-sm-3 text-center">
+					<div class="col-sm-3">
 						<a class="social" href="index.html">
 							<span class="fa fa-facebook icon-md"></span>
 						</a>
 					</div>
 
-					<div class="col-sm-3 text-center">
+					<div class="col-sm-3">
 						<a class="social" href="index.html">
 							<span class="fa fa-dribbble icon-md"></span>
 						</a>
 					</div>
 					
-					<div class="col-sm-3 text-center">
+					<div class="col-sm-3">
 						<a class="social" href="index.html">
 							<span class="fa fa-instagram icon-md"></span>
 						</a>
