Ajout de la classe text-center sur l'ensemble du body

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- Analytics END -->    
 </head>
 
-<body>
+<body class="text-center">
 
 	<!-- bloc-0 -->
 	<header class="container bloc bgc-white l-bloc bloc-sm" id="bloc-0">
@@ -56,7 +56,7 @@
 	<!-- bloc-0 END -->
 
 	<!-- Principal conteneur -->
-	<main class="page-container text-center">
+	<main class="page-container">
 
 		<!-- bloc-1-presentation -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
@@ -184,7 +184,7 @@
 	<!-- Principal conteneur END -->
 	
 	<!-- Footer - bloc-8 -->
-	<footer class="bloc bgc-atomic-tangerine d-bloc text-center" id="bloc-8">
+	<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 
 		<div class="container bloc-sm">
 			<div class="row col-sm-12">
