--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
 <!-- Analytics END -->    
 </head>
 
-<body>	
+<body class="text-center"></body>
 		
 	<!-- bloc-0 -->
 	<header class="container bloc bgc-white l-bloc bloc-sm" id="bloc-0">
@@ -63,9 +63,9 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-white">Parlons web design !</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
+						<h1 class="hero-bloc-text tc-white">Parlons web design !</h1>
+						<p class="mg-lg tc-white tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
+						<p class="mg-lg tc-white tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
 					</div>
 				</div>
 			</div>
@@ -121,35 +121,27 @@
 		<div class="container bloc-sm">
 			<div class="row">
 				<div class="col-sm-12">
-					<p class="text-center white">Agence La Panthère - Agence web basée à Lyon.</p>
+					<p class="white">Agence La Panthère - Agence web basée à Lyon.</p>
 					<div class="row row-no-gutters social">
 						<div class="col-sm-3">
-							<div class="text-center">
 								<a class="social" href="index.html">
 									<span class="fa fa-twitter icon-md"></span>
 								</a>
-							</div>
 						</div>
 						<div class="col-sm-3">
-							<div class="text-center">
 								<a class="social" href="index.html">
 									<span class="fa fa-facebook icon-md"></span>
 								</a>
-							</div>
 						</div>
 						<div class="col-sm-3">
-							<div class="text-center">
 								<a class="social" href="index.html">
 									<span class="fa fa-dribbble icon-md"></span>
 								</a>
-							</div>
 						</div>
 						<div class="col-sm-3">
-							<div class="text-center">
 								<a class="social" href="index.html">
 									<span class="fa fa-instagram icon-md"></span>
 								</a>
-							</div>
 						</div>
 					</div>
 				</div>
