--- a/page2.html
+++ b/page2.html
@@ -61,12 +61,10 @@
 		<!-- bloc-6 -->
 		<section class="bloc bg-dots-bg bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture texture-paper" id="bloc-6">
 			<div class="container bloc-lg">
-				<div class="row">
-					<div class="col-sm-12">
-						<h1 class="hero-bloc-text tc-white">Parlons web design !</h1>
-						<p class="mg-lg tc-white tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
-						<p class="mg-lg tc-white tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
-					</div>
+				<div class="col-sm-12 tc-white">
+					<h1 class="hero-bloc-text">Parlons web design !</h1>
+					<p class="mg-lg tight-width-whitespace">Nous sommes ravis que vous souhaitiez collaborer avec notre agence.</p>
+					<p class="mg-lg tight-width-whitespace">Parlez-nous de votre projet en complétant le formulaire ci-dessous.</p>
 				</div>
 			</div>
 		</section>
