--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">	    
 	
-    <title>La Panthère - Agence de Web Design</title>
+    <title>La Panthère - Agence de Web Design à Lyon</title>
 	<meta name="description" content="La Panthère est une grande agence de Web Design de Lyon, qui aide les entreprise à devenir attractives et visibles sur Internet">    
 <!-- Analytics --> 
 <!-- Analytics END -->    
