--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<!-- bloc-0 END -->
 
 	<!-- Principal conteneur -->
-	<main class="page-container">
+	<main class="text-center page-container">
 
 		<!-- bloc-1-presentation -->
 		<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
