Correction texte de la citation

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-		<link rel="shortcut icon" type="image/png" href="favicon.jpg">   
+		<link rel="shortcut icon" type="image/png" href="favicon.jpg"> 
+
 		<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> 
 		<link rel="stylesheet" type="text/css" href="./css/style.css">
 		<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+		<script src="./js/jquery-2.1.0.min.js"></script>
+		<script src="./js/bootstrap.min.js"></script>
+		<script src="./js/blocs.js"></script>
+		<script src="./js/jquery.touchSwipe.min.js" defer></script>
+		<script src="./js/gmaps.min.js"></script>
 		
 		<title>La Panthère - Agence de Web Design à Lyon</title>
-		<meta name="description" content="La Panthère est une grande agence de Web Design de Lyon, qui aide les entreprise à devenir attractives et visibles sur Internet">    
+		<meta name="description" content="La Panthère est une grande agence de Web Design de Lyon,
+		qui aide les entreprise à devenir attractives et visibles sur Internet">    
+
 	<!-- Analytics --> 
 	<!-- Analytics END -->    
 	</head>
@@ -99,7 +107,8 @@
 					</div>
 					<div class="row voffset-lg voffset">
 						<figure class="col-xs-12 col-md-8 col-md-offset-2 text-center">					
-							<cite>L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lignes à Lyon."</cite>
+							<cite>"L'agence La Panthère est une excellente agence web ! Les web designers ont réussi à capturer l'essence
+								 de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lignes à Lyon."</cite>
 							<figcaption>Maxime Guibard, PDG de À vos fourchettes</figcaption>
 						</figure>
 					</div>
